# PrivyFile

./: .gitignore  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/privyfile-core/: Cargo.toml
crates/privyfile-core/src/: lib.rs  types.rs
crates/privyfile-core/src/batch/: mod.rs
crates/privyfile-core/src/history/: mod.rs
crates/privyfile-core/src/metadata/: categories.rs  exiftool.rs  mod.rs
crates/privyfile-core/src/profiles/: mod.rs
crates/privyfile-core/src/reports/: mod.rs
crates/privyfile-core/src/shred/: mod.rs
crates/privyfile-core/src/watch/: mod.rs
scripts/: exiftool-paths.js  fetch-exiftool-unix.js  fetch-exiftool.js  fetch-exiftool.ps1  install-context-menu.ps1  privyfile-context.desktop  test-exiftool-runtime.js  test-exiftool-runtime.ps1  test-exiftool-runtime.sh  verify-exiftool-bundle.js  verify-exiftool-bundle.ps1  verify-exiftool-bundle.sh  verify-exiftool-installer.js  verify-exiftool-installer.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/linux/: README.txt
src-tauri/binaries/macos/: README.txt
src-tauri/binaries/win/: README.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src/components/: BatchProgress.tsx  DropZone.tsx  Layout.tsx  MetadataTable.tsx  PrivacyScore.tsx  ShredOptions.tsx
src/hooks/: useSettings.ts  useTauriCommand.ts
src/lib/: types.test.ts  types.ts
(+3 files in other folders)
