[package]
name = "privyfile-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PrivyFile command-line interface"

[[bin]]
name = "privyfile-cli"
path = "src/main.rs"

[dependencies]
privyfile-core = { path = "../crates/privyfile-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
