[package]
name = "privyfile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PrivyFile desktop application"

[lib]
name = "privyfile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
privyfile-core = { path = "../crates/privyfile-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
