[package]
name = "privyfile-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core metadata and shredding engine for PrivyFile"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
rand = "0.9"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.6"
image = "0.25"
notify = "8"
notify-debouncer-full = "0.5"

[dev-dependencies]
tempfile = "3"
